Bug 805474: fix chatbar title styling in high contrast themes, and crop chatbox titles, r=jaws, a=gavin
--HG--
extra : transplant_source : %96%FD%3BE%88%99%B4%3Ae%F6%AE%0E%D2%E9%03%B5%D6X%0Du

--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -2710,7 +2710,7 @@ stack[anonid=browserStack][responsivemode] {
 
 .chat-title {
   font-weight: bold;
-  color: -moz-dialogtext;
+  color: black;
   text-shadow: none;
   cursor: inherit;
 }
